@@ -1,0 +1,216 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<GCompris>
+  <Wordlist name="default-uk" description="Default Ukrainian" locale="uk">
+    <level value="1">
+друг
+ширина
+вовк
+і
+чи
+наступний
+ферма
+машина
+великий
+птах
+дорога
+вона
+чашка
+швидко
+літати
+дивися
+просто
+легко
+любов
+жарт
+йди
+старт
+стрибок
+стіл
+собака
+кішка
+корова
+книга
+літера
+червоний
+зелений
+синій
+свій
+мокрий
+    </level>
+    <level value="2">
+статок
+вчитися
+здорово
+пісок
+дивися
+сонце
+замок
+маріуполь
+гірка
+верхом
+розбитий
+миша
+слон
+компактний
+йти
+приємний
+висота
+знайомий
+підтримка
+озеро
+комп'ютер
+музика
+звук
+колір
+чудово
+потужність
+мрія
+школа
+привіт
+важкий
+білий
+гра
+рівень
+
+    </level>
+    <level value="3">
+друг
+ширина
+вовка
+и
+или
+следующий
+ферма
+машина
+велик
+птица
+дорога
+его
+она
+чашка
+быстро
+летать
+смотри
+просто
+легко
+любовь
+шутка
+иди
+старт
+прыжок
+стол
+собака
+кошка
+корова
+книга
+буква
+красный
+зеленый
+синий
+свой
+мокрый
+достаток
+учиться
+здорово
+песок
+смотри
+солнце
+замок
+мариуполь
+горка
+верхом
+разбитый
+мышь
+слон
+компактный
+идти
+приятный
+высота
+знакомый
+поддержка
+озеро
+компьютер
+музыка
+звук
+цвет
+замечательно
+мощность
+мечта
+школа
+привет
+тяжелый
+белый
+игра
+уровень
+
+друг
+ширина
+вовк
+і
+чи
+наступний
+ферма
+машина
+великий
+птах
+дорога
+вона
+чашка
+швидко
+літати
+дивися
+просто
+легко
+любов
+жарт
+йди
+старт
+стрибок
+стіл
+собака
+кішка
+корова
+книга
+літера
+червоний
+зелений
+синій
+свій
+мокрий
+статок
+вчитися
+здорово
+пісок
+дивися
+сонце
+замок
+маріуполь
+гірка
+верхом
+розбитий
+миша
+слон
+компактний
+йти
+приємний
+висота
+знайомий
+підтримка
+озеро
+комп'ютер
+музика
+звук
+колір
+чудово
+потужність
+мрія
+школа
+привіт
+важкий
+білий
+гра
+рівень
+
+    </level>
+  </Wordlist>
+</GCompris>
