@@ -1,3 +1,9 @@
+2008-10-16  Bruno coudoin  <bruno.coudoin@free.fr>
+
+        - Created Ukrainian word list by Slava Dubrovskiy
+
+	* boards/wordsgame/default-uk.xml:
+
 2008-10-14  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Added missing manual entry.
